Loading Bar Hide-block Un-Hide

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     crossorigin="anonymous">
 </head>
 
+<style>
+  #loading,
+  #results {
+    display: none;
+  }
+</style>
+
 <body class="bg-dark">
   <div class="container">
     <div class="row">
@@ -39,11 +46,9 @@
             </div>
           </form>
           <!-- LOADER -->
-          <!--
-            <div id="loading">
-              <img src="img/loading.gif" alt="">
-            </div>
-            -->
+          <div id="loading">
+            <img src="img/loading.gif" alt="">
+          </div>
           <!-- RESULTS -->
           <div id="results" class="pt-4">
             <h5>Results</h5>
